documented why nginx 0.8.42+ cannot work with us.

--- a/README
+++ b/README
@@ -61,7 +61,8 @@ Compatibility
 
     *   0.7.x >= 0.7.21 (last tested version is 0.7.66)
 
-Note that nginx 0.8.42+ won't work.
+Note that nginx 0.8.42+ won't work due to a famous regression appeared
+since 0.8.42: <http://forum.nginx.org/read.php?29,103078,103078 >.
 
 Original ngx_eval documentation:
 
