--- a/README
+++ b/README
@@ -82,7 +82,7 @@ Here's a small example using ngx_lua:
 
  location / {
    content_by_lua '
-       local res = ngx.location.capture('/getbanner')
+       local res = ngx.location.capture("/getbanner")
        ngx.print(res)
    ';
  }
