--- a/README
+++ b/README
@@ -61,18 +61,18 @@ Limitations
 Compatibility
     The following versions of Nginx should work with this module:
 
-    *   0.8.0 ~ 0.8.41 (0.8.42+ requires patching, see below)
+    *   0.8.0 ~ 0.8.41, 0.8.54+ (0.8.42 ~ 0.8.53 requires patching, see below)
 
     *   0.7.x >= 0.7.21 (last tested version is 0.7.66)
 
-Note that nginx 0.8.42+ won't work due to a famous regression appeared
+Note that nginx 0.8.42 ~ 0.8.53 won't work due to a famous regression appeared
 since 0.8.42: <http://forum.nginx.org/read.php?29,103078,103078 >,
 but fortunately a patch is available for nginx 0.8.53:
 
     http://agentzh.org/misc/nginx/nginx-0.8.53-rewrite_phase_fix.patch
 
 This one-line patch should also be able to apply cleanly to other versions
-of nginx 0.8.42+.
+of nginx 0.8.42 ~ 0.8.53.
 
 Nowadays we prefer ngx_lua to do the tasks originally done by ngx_eval
 because of various inherent limitations in ngx_eval (and yeah, it also
